Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34672

[Durability] cbstats ops_create value is not consistent between sync and non-sync writes

    XMLWordPrintable

Details

    • Triaged
    • Centos 64-bit
    • No
    • KV-Engine MH 2nd Beta

    Description

      Build: 6.5.0-3556

      Scenario-1 (SyncWrite):

      1. Two node cluster - 1 Couchbase bucket (replica=1)
      2. Create 1 document with durability=MAJORITY 

      Scenario-2 (Non SyncWrite):

      1. Two node cluster - 1 Couchbase bucket (replica=1)
      2. Create 1 document without durability

      Observation:

      While fetching cbstats vbucket-details in both the cases, ops_create value is not matching. Same thing is observed for "ops_update" field during update case as well.

      In Sync Write case:
      vb_971:ops_create:                       2
       
       
      In Non Sync Write case:
      vb_971:ops_create:                       1

      Expectation:

      Stats should be consistent between sync and async writes

      Document uploaded:

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ashwin.govindarajulu Ashwin Govindarajulu
            ashwin.govindarajulu Ashwin Govindarajulu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty