MB-34672: Persistence of pending item increments ops_create

A single sync-write (once committed) resulted in ops_create:2 A single
sync-delete (once committed) resulted in ops_create:1

This occurs because the persistence callback increments opsCreate for
both pending and committed persisted items.

To resolve the MB, pending should not increment opsCreate.

Change-Id: I2d5bbfa12b2a86c4cc511ae3c16d48781282a5b3
Reviewed-on: http://review.couchbase.org/114962
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>